--- a/css/portfolio-item.css
+++ b/css/portfolio-item.css
@@ -6,6 +6,8 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    
+    background-color: #C6E2FF;
 }
 
 .portfolio-item {
