--- a/css/portfolio-item.css
+++ b/css/portfolio-item.css
@@ -9,7 +9,7 @@ body {
     
     background-color: #FFFFF0;
     
-    font-family: Palatino Linotype;
+    font-family: Book Antiqua;
 }
 
 .portfolio-item {
