--- a/main.css
+++ b/main.css
@@ -1,8 +1,5 @@
-.range{
-  background-size:cover;
-  color: #ffffff;
-  }
-
 div.fixed{
   position: fixed;
+  border: 3px solid #000000;
+  color: #ffffff;
 }
