--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 div.fixed{
   position: fixed;
   border: 3px solid #000000;
-  padding: 3px;
+  background-color: #ffffff;
+  padding-right: 3px;
+  padding-left: 3px;
 }
