--- a/main.css
+++ b/main.css
@@ -5,3 +5,11 @@ div.fixed{
   padding-right: 10px;
   padding-left: 10px;
 }
+
+div.description{
+  position: relative;
+  border: 3px solid #000000;
+  background-color: #ffffff
+  padding-right: 10px;
+  padding-left: 10px;
+}
