--- a/main.css
+++ b/main.css
@@ -19,5 +19,5 @@ div.estimate{
   background-color: #ffffff;
   padding-right: 10px;
   padding-left: 10px;
-  font-family: Arial;
+  font-family: Arial Rounded MT Bold;
 }
