--- a/main.css
+++ b/main.css
@@ -17,6 +17,7 @@ div.description{
 div.estimate{
   border: 3px solid #000000;
   background-color: #ffffff;
+  padding-top: 10px;
   padding-right: 10px;
   padding-left: 10px;
   font-family: Arial Rounded MT Bold;
