--- a/main.css
+++ b/main.css
@@ -7,11 +7,8 @@ div.fixed{
 }
 
 div.description{
-  position: relative;
-  border: 3px solid #000000;
-  background-color: #ffffff
-  padding-right: 10px;
-  padding-left: 10px;
+ font-family: Arial Roundeded MT Bold;
+ font-size: 135%;
 }
 
 div.estimate{
