--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ div.estimate{
   padding-top: 10px;
   padding-right: 10px;
   padding-left: 10px;
+  padding-bottom: 10px;
   font-size: 130%;
 }
 
