--- a/css/portfolio-item.css
+++ b/css/portfolio-item.css
@@ -7,9 +7,9 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     
-    background-color: #FFFFF0;
+    background-color: #6da0c4;
     
-    font-family: Book Antiqua;
+    font-family: Verdana;
 }
 
 .portfolio-item {
