--- a/main.css
+++ b/main.css
@@ -10,6 +10,12 @@ div.description{
  font-size: 110%;
 }
 
+div.photo{
+  border: 2px solid white;
+  
+  text-align: center; margin: 1em 0;
+}
+
 div.estimate{
   border: 3px solid #000000;
   background-color: #ffffff;
