--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 div.fixed{
   position: fixed;
   border: 3px solid #000000;
-  background-color: black;
+  background-color: white;
+  color: black;
   padding-right: 10px;
   padding-left: 10px;
 }
@@ -12,7 +13,8 @@ div.description{
 
 div.estimate{
   border: 3px solid #000000;
-  background-color: black;
+  background-color: white;
+  color: black;
   padding-top: 10px;
   padding-right: 10px;
   padding-left: 10px;
