--- a/css/portfolio-item.css
+++ b/css/portfolio-item.css
@@ -7,7 +7,7 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     
-    background-color: #477bb2;
+    background-color: #94aed1;
     color: white;
     font-family: Verdana;
 }
