--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+div.intro{
+  border: 3px solid #3d58fc;
+  background-color: white;
+  color: black;
+  font-size: 110%;
+}
+
 div.fixed{
   position: fixed;
   border: 3px solid #000000;
