--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
 div.intro{
-  border: 3px solid #3d58fc;
-  background-color: white;
-  color: black;
+  border: 7px solid #000000;
+  background-color: 57657c;
+  color: white;
   font-size: 110%;
+  padding: 20px;
+  border-radius: 15px 50px;
 }
 
 div.fixed{
