--- a/main.css
+++ b/main.css
@@ -1,8 +1,8 @@
 div.intro{
   border: 7px solid #000000;
-  background-color: 57657c;
+  background-color: 444f60;
   color: white;
-  font-size: 110%;
+  font-size: 120%;
   padding: 20px;
   border-radius: 15px 50px;
 }
