--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ h7{
 
 div.intro{
   border: 7px solid #000000;
-  background-color: 444f60;
+  background-color: #395756;
   color: white;
   font-size: 120%;
   padding: 20px;
